[tool.poetry]
name = "hexlet_url_shortener"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
black = "^20.8b1"
flake8 = "^3.9.1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
